--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,305 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
+
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&family=Roboto:wght@500&display=swap"
+      rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Miami</title>
+    <title>THE MET</title>
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="./images/icons/Icon-logo.png"
+    >
     <link rel="stylesheet" href="./styles/main.scss">
     <script src="scripts/main.js" defer></script>
   </head>
-  <body>
-    <h1>Landing Page</h1>
+
+  <body class="page__body">
+    <header id="header" class="page__header header">
+      <div class="top-bar">
+        <a href="#header" class="top-bar__logo"></a>
+        <div class="top-bar__icons">
+          <div class="top-bar__phone">
+            <div class="top-bar__phones">
+              <a href="tel:+12125357710" class="top-bar__museum-phone">The Met Fifth Avenue <br>+1 212-535-7710</a>
+              <a href="tel:+12129233700" class="top-bar__museum-phone">The Met Cloisters <br>+1 212-923-3700</a>
+            </div>
+            <a href="tel:+12125357710" class="icon icon--phone"></a>
+          </div>
+          <a href="#menu" class="icon icon--menu"></a>
+        </div>
+      </div>
+      <h1 class="header__title">
+        Welcome
+        <br>to The MET
+      </h1>
+    </header>
+
+    <aside class="page__menu menu" id="menu">
+      <div class="menu__top top-bar">
+        <a href="#" class="top-bar__logo"></a>
+        <a href="#" class="icon icon--close"></a>
+      </div>
+
+
+      <nav class="nav menu__nav">
+        <ul class="nav__list">
+          <li class="nav__item">
+            <a class="nav__link" href="#header">Home</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#about">About Us</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#now-on-view">Now on view</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#more-to-exp">Explore Online</a>
+          </li>
+          <li class="nav__item">
+            <a class="nav__link" href="#contacts">Contacts</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="menu__phones phones">
+        <ul class="phones__list">
+          <li class="phones__item">
+            <a href="tel:12125357710" class="phones__link">The Met Fifth Avenue<br>+1 212-535-7710</a>
+          </li>
+          <li class="phones__item">
+            <a href="tel:12129233700" class="phones__link">The Met Cloisters<br>+1 212-923-3700</a>
+          </li>
+        </ul>
+        <a href="tel:" class="phones__call-to-order">call to order</a>
+      </div>
+
+    </aside>
+
+    <main class="page__main main">
+      <section id="about" class="main__museum-hours section museum-hours">
+        <h2 class="museum-hours__title">
+          Museum hours
+        </h2>
+
+        <div class="museum-hours__museums">
+          <div class="museum-hours__museum">
+            <h3 class="museum-hours__subtitle">The Met Fifth Avenue</h3>
+            <div class="museum-hours__work-time">
+              <div class="museum-hours__time">
+                <p class="museum-hours__texts">10 am - 5 pm</p>
+                <p class="museum-hours__texts">10 am - 9 pm</p>
+                <p class="museum-hours__texts">Closed</p>
+              </div>
+              <div class="museum-hours__days">
+                <p class="museum-hours__texts">Sun, Mon, Tue, Thu</p>
+                <p class="museum-hours__texts">Fri, Sat</p>
+                <p class="museum-hours__texts">Wen</p>
+              </div>
+            </div>
+            <div class="museum-hours__closed-on">
+              <p>Thanksgiving Day, Dec 25, Jan 1, and the first Monday in May.</p>
+            </div>
+          </div>
+
+          <div class="museum-hours__museum">
+            <h3 class="museum-hours__subtitle">The Met Cloisters</h3>
+            <div class="museum-hours__work-time">
+              <div class="museum-hours__time">
+                <p class="museum-hours__texts">10 am - 4.30 pm</p>
+                <p class="museum-hours__texts">Closed</p>
+              </div>
+              <div class="museum-hours__days">
+                <p class="museum-hours__texts">Thu - Tue</p>
+                <p class="museum-hours__texts">Wen</p>
+              </div>
+            </div>
+            <div class="museum-hours__closed-on">
+              <p>Thanksgiving Day, Dec 25, Jan 1</p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="now-on-view" class="main__now-on-view section now-on-view">
+        <div class="now-on-view__titles">
+          <h2 class="now-on-view__title">
+            Now On View
+          </h2>
+          <p class="now-on-view__subtitle">
+            Explore exhibition gallery guides, videos, articles, and more.
+          </p>
+        </div>
+        <div class="now-on-view__collection">
+          <div class="now-on-view__exibits">
+            <img
+              src="./images/collage-long.png"
+              class="now-on-view__img now-on-view__img--wide"
+              alt="collage"
+            >
+            <img
+              src="./images/portrait-square.png"
+              class="now-on-view__img now-on-view__img--square"
+              alt="portrait"
+            >
+          </div>
+          <div class="now-on-view__description">
+            <p class="now-on-view__red-text">A New Look at Old Masters</p>
+            <p class="now-on-view__common text">December 12, 2020 – Through Spring 2023</p>
+          </div>
+        </div>
+        <div class="now-on-view__collection">
+          <div class="now-on-view__exibits-3-img">
+            <img
+              src="./images/god-square.png"
+              class="now-on-view__img now-on-view__img--big-square"
+              alt="god"
+            >
+            <img
+              src="./images/carpet-2.png"
+              class="now-on-view__img now-on-view__img--big-square"
+              alt="carpet"
+            >
+            <img
+              src="./images/carpet-square.png"
+              class="now-on-view__img now-on-view__img--big-square not-regular"
+              alt="carpet"
+            >
+          </div>
+          <div class="now-on-view__description">
+            <p class="now-on-view__red-text">Bodhisattvas of Wisdom, Compassion, and Power</p>
+            <p class="now-on-view__common text">March 27, 2021 – October 30, 2022</p>
+          </div>
+        </div>
+        <div class="now-on-view__collection">
+          <div class="now-on-view__exibits">
+            <img
+              src="./images/clocks-square.png"
+              class="now-on-view__img now-on-view__img--square"
+              alt="clocks"
+            >
+            <img
+              src="./images/figures-long.png"
+              class="now-on-view__img now-on-view__img--wide"
+              alt="figures"
+            >
+          </div>
+          <div class="now-on-view__description">
+            <p class="now-on-view__red-text">Inspiring Walt Disney: The Animation of French Decorative Arts</p>
+            <p class="now-on-view__common text">December 10, 2021 – March 6, 2022</p>
+          </div>
+        </div>
+        <div class="now-on-view__button">
+          <a href="#" class="now-on-view__link">View all exhibitions</a>
+        </div>
+
+      </section>
+
+      <section id="more-to-exp" class="main__more-explore-online more-explore-online section">
+        <h2 class="more-explore-online__title">
+          More to Explore Online
+        </h2>
+        <div class="more-explore-online__categories">
+          <div class="more-explore-online__categorie">
+            <img
+              src="./images/statue-more.png"
+              alt="statue"
+              class="more-explore-online__img"
+            >
+            <p class="more-explore-online__category-title">Collection Areas</p>
+            <p class="more-explore-online__categorie-description">These collection areas study, exhibit, and care for the objects in The Met collection.</p>
+          </div>
+          <div class="more-explore-online__categorie">
+            <img
+              src="./images/sfinks-more.png"
+              alt="sfinks"
+              class="more-explore-online__img"
+            >
+            <p class="more-explore-online__category-title">Travel</p>
+            <p class="more-explore-online__categorie-description">Travel with The Met connects the Museum's wide and diverse audience to art, inspiration, and historical perspective.</p>
+          </div>
+          <div class="more-explore-online__categorie">
+            <img
+              src="./images/painting-more.png"
+              alt="paining"
+              class="more-explore-online__img"
+            >
+            <p class="more-explore-online__category-title">Virtual group tours</p>
+            <p class="more-explore-online__categorie-description"> Request a guided tour, reserve admission and lead your own small group, or request a live virtual tour led by a Museum guide.</p>
+          </div>
+        </div>
+      </section>
+
+      <section id="contacts" class="main__contact-us contact-us section">
+        <h2 class="contact-us__title">Contact us</h2>
+        <div class="contact-us__container">
+          <div class="contact-us__museums">
+            <div class="contact-us__museum">
+              <h3 class="contact-us__museum-title">The Met Fifth Avenue</h3>
+              <div class="contact-us__text-block">
+                <p class="contact-us__text">Phone</p>
+                <a href="+1 212-535-7710" class="contact-us__text-bold">+1 212-535-7710</a>
+              </div>
+              <div class="contact-us__text-block">
+                <p class="contact-us__text">Address</p>
+                <a
+                  target="_blank"
+                  href="https://www.google.com/maps/place/1000+5th+Ave,+New+York,+NY+10028,+%D0%A1%D0%A8%D0%90/@40.7794395,-73.9659593,17z/data=!3m1!4b1!4m6!3m5!1s0x89c25896dcda965d:0x5bbcfab18ea2c739!8m2!3d40.7794355!4d-73.9633844!16s%2Fg%2F1yl46zflv?entry=ttu"
+                  class="contact-us__text-bold"
+                >1000 Fifth Avenue New York, NY 10028</a>
+              </div>
+            </div>
+            <div class="contact-us__museum">
+              <h3 class="contact-us__museum-title">The Met Cloisters</h3>
+              <div class="contact-us__info">
+                <div class="contact-us__text-block">
+                  <p class="contact-us__text">Phone</p>
+                  <a href="tel:+1 212-923-3700" class="contact-us__text-bold">+1 212-923-3700</a>
+                </div>
+                <div class="contact-us__text-block">
+                  <p class="contact-us__text">Address</p>
+                  <a
+                    target="_blank"
+                    href="https://www.google.com/maps?sca_esv=589611474&rlz=1C1GCEA_enUA1021UA1021&output=search&q=99+Margaret+Corbin+Drive+Fort+Tryon+Park+New+York,+NY+10040&source=lnms&entry=mc&sa=X&ved=2ahUKEwiG3s2s1YWDAxWgVPEDHTxZCQ0Q0pQJegQIDRAB"
+                    class="contact-us__text-bold"
+                  >99 Margaret Corbin Drive Fort Tryon Park New York, NY 10040</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <form
+            onsubmit="this.reset(); return false;"
+            action="#"
+            class="contact-us__form"
+          >
+            <input
+              type="text"
+              placeholder="Name"
+              class="contact-us__form-input"
+              required
+            >
+            <input
+              type="email"
+              placeholder="Email"
+              class="contact-us__form-input"
+              required
+            >
+            <textarea
+              placeholder="Message"
+              class="contact-us__form-input contact-us__form-input--message"
+              required
+            ></textarea>
+            <button class="contact-us__form-button">Send</button>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="page__footer footer">
+    </footer>
   </body>
+
 </html>
